2006-Nov-30  Heikki Junnila <hjunnila@users.sf.net>
	* Created release 2.6-1

2006-Nov-30  Heikki Junnila <hjunnila@users.sf.net>
	* Added m_toolbar->setMovingEnabled(false) to all toolbars to prevent
	  them from being dragged all over the place.

2006-Nov-28  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a bug in pluginmanager.cpp that tried to give an integer
	  to a function that actually takes a QString. Since newer QT versions
	  contain a QString implementation that accepts also integers, this
	  isn't a problem to them. Rather, it's a problem to older QT's

2006-Nov-26  Heikki Junnila <hjunnila@users.sf.net>
	* CVS didn't add files under etc/... Fixed...

2006-Nov-26  Heikki Junnila <hjunnila@users.sf.net>
	* Added normal desktop entries for qlc and dce under etc for
	  non-debian installations.
	* Promoted debian release to version 2.6-0.
	* Modified normal desktop entries to go under Multimedia.
	* Modified debian desktop entries to go under Lighting.
	* Renamed Q.png to qlc.png.
	* Renamed fixtureeditor.png to qlc-fixtureeditor.png.
	* Changed the default debian package command to exclude CVS dirs.
	* Fixed DMX monitor menu entry to reset after close.

2006-Nov-14  Heikki Junnila <hjunnila@users.sf.net>
	* Changed the context menu in monitor to a menu bar for better
	  accessibility on touch screens.

2006-Nov-14  Heikki Junnila <hjunnila@users.sf.net>
	* Added support for universes to monitor.

2006-Nov-12  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a small graphics bug in monitor that extended the device label
	  a bit too far only when the last channel was drawn on the next line.

2006-Nov-12  Heikki Junnila <hjunnila@users.sf.net>
	* Changed device manager to use themed colors in device info
	* Changed the X gap between two channels in monitor from 5px to 10px
	* Removed channel variables from monitor

2006-Nov-09  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed monitor to display device labels on as many rows as necessary.
